docs: Update wiki link