@@ -81,12 +81,11 @@ public class RichPatternParser extends FaweParser<Pattern> {
                         throw new SuggestInputParseException(
                                 new NoMatchException(Caption.of("fawe.error.parse.unknown-pattern", full,
                                         TextComponent
-                                                .of("https://github.com/IntellectualSites/FastAsyncWorldEdit-Documentation/wiki" +
-                                                        "/Patterns"
+                                                .of("https://intellectualsites.github.io/fastasyncworldedit-documentation/patterns/patterns"
                                                 )
                                                 .clickEvent(
                                                         ClickEvent.openUrl(
-                                                                "https://github.com/IntellectualSites/FastAsyncWorldEdit-Documentation/wiki/Patterns"
+                                                                "https://intellectualsites.github.io/fastasyncworldedit-documentation/patterns/patterns"
                                                         ))
                                 )),
                                 full,
@@ -132,11 +131,11 @@ public class RichPatternParser extends FaweParser<Pattern> {
                                 } catch (NoMatchException e) {
                                     throw new NoMatchException(Caption.of("fawe.error.parse.unknown-pattern", full,
                                             TextComponent
-                                                    .of("https://github.com/IntellectualSites/FastAsyncWorldEdit-Documentation/wiki/Patterns"
+                                                    .of("https://intellectualsites.github.io/fastasyncworldedit-documentation/patterns/patterns"
                                                     )
                                                     .clickEvent(
                                                             com.sk89q.worldedit.util.formatting.text.event.ClickEvent.openUrl(
-                                                                    "https://github.com/IntellectualSites/FastAsyncWorldEdit-Documentation/wiki/Patterns"
+                                                                    "https://intellectualsites.github.io/fastasyncworldedit-documentation/patterns/patterns"
                                                             ))
                                     ));
                                 }
@@ -154,7 +153,7 @@ public class RichPatternParser extends FaweParser<Pattern> {
                             try {
                                 String cmdArgs = ((args.isEmpty()) ? "" : " " + StringMan.join(args, " "));
                                 List<Substring> split =
-                                        CommandArgParser.forArgString(cmdArgs).parseArgs().collect(Collectors.toList());
+                                        CommandArgParser.forArgString(cmdArgs).parseArgs().toList();
                                 List<String> argStrings = split
                                         .stream()
                                         .map(Substring::getSubstring)
